Fixed bug in audio controls

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="xiaogame/xiaogame.js?JSCZB=1986584534"></script>
+        <script type="text/javascript" src="xiaogame/xiaogame.js?MJTYB=1662115698"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
